# riri-imgui-vulkano

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
riri-imgui-vulkano/: Cargo.toml  build.rs
riri-imgui-vulkano-app/: Cargo.toml  build.rs
riri-imgui-vulkano-app/shaders/: basic3d.ps.glsl  basic3d.ps.spv  basic3d.vs.glsl  basic3d.vs.spv  imgui.ps.glsl  imgui.ps.spv  imgui.vs.glsl  imgui.vs.spv  phong.ps.glsl  phong.ps.spv  phong.vs.glsl  phong.vs.spv
riri-imgui-vulkano-app/src/: app.rs  camera.rs  clipboard.rs  color.rs  logger.rs  main.rs  renderer.rs  version.rs
riri-imgui-vulkano-app/src/renderer/: commands.rs  context.rs  pipeline.rs  render_pass.rs  swapchain.rs
riri-imgui-vulkano-shaders/: Cargo.toml
riri-imgui-vulkano-shaders/examples/: shader-compiler.rs
riri-imgui-vulkano-shaders/src/: lib.rs
riri-imgui-vulkano/src/: commands.rs  context.rs  descriptors.rs  device_select.rs  error.rs  geometry.rs  lib.rs  pipeline.rs  render_pass.rs  resources.rs  shaders.rs  swapchain.rs  version.rs  vertex.rs  viewport.rs
