[package]
name = "riri-imgui-vulkano-app"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
humantime = "2.3.0"
gilrs-imgui-support = { git = "https://github.com/rirurin/gilrs-imgui-support"}
glam = "0.32"
image = "0.25"
imgui = { git = "https://github.com/rirurin/imgui-rs", features = ["docking", "tables-api"] }
imgui-winit-support = { git = "https://github.com/rirurin/imgui-winit-support" }
riri-imgui-vulkano = { path = "../riri-imgui-vulkano" }
riri-inspector-components = { git = "https://github.com/rirurin/riri-imgui-components", features = ["imgui-riri"] }
riri-mod-tools-proc = { git = "https://github.com/rirurin/riri-mod-tools" }
riri-mod-tools-rt = { git = "https://github.com/rirurin/riri-mod-tools", default-features = false, features = ["detailed-logs"] }
vulkano = "0.35"
winit = { git = "https://github.com/rirurin/winit" }

[build-dependencies]
riri-imgui-vulkano-shaders = { path = "../riri-imgui-vulkano-shaders", optional = true }
riri-mod-tools = { git = "https://github.com/rirurin/riri-mod-tools" }
shaderc = { version = "0.10.1", optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.30"

[features]
default = []
use_compiler = ["dep:riri-imgui-vulkano-shaders", "dep:shaderc", "riri-imgui-vulkano/use_compiler"]